# robot_ros2_cd2

./: .gitignore  README.md
install/: setup.sh
install/my_bot/share/my_bot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_bot/share/my_bot/cmake/: my_botConfig-version.cmake  my_botConfig.cmake
install/my_bot/share/my_bot/config/: empty.yaml
install/my_bot/share/my_bot/description/: gazebo_control.xacro  inertial_macros.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
install/my_bot/share/my_bot/environment/: ament_prefix_path.dsv  path.dsv
install/robotcd_pkg/share/robotcd_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/velodyne_description/share/velodyne_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/velodyne_gazebo_plugins/include/velodyne_gazebo_plugins/: GazeboRosVelodyneLaser.hpp
install/velodyne_gazebo_plugins/share/velodyne_gazebo_plugins/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/velodyne_simulator/share/velodyne_simulator/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
src/robotcd_pkg/: package.xml  setup.cfg  setup.py
src/robotcd_pkg/install/: local_setup.sh  setup.sh
src/robotcd_pkg/launch/: my_robot_world.launch.py
src/robotcd_pkg/log/: latest_build
src/robotcd_pkg/models/: model.sdf
src/robotcd_pkg/worlds/: house.world
(+49 files in other folders)
