<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotcd_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="huynhcongan2442004@gmail.com">an</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-colcon-common-extensions</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_ros2_control</depend> 
  <depend>gazebo_ros_pkgs</depend> 
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
